Fix scrollbar for carousel by amending tu-container class

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -2504,6 +2504,9 @@ body {
 
 #tu-container {
     display: block;
+}
+
+.tu-container {
     width: 100%;
     height: 100%;
     margin: 0 auto;
@@ -2511,19 +2514,19 @@ body {
 }
 
     @media (min-width: 576px) {
-        #tu-container {
+        .tu-container {
             max-width: 540px;
         }
     }
 
     @media (min-width: 768px) {
-        #tu-container  {
+        .tu-container  {
             max-width: 720px;
         }
     }
 
     @media (min-width: 992px) {
-        #tu-container {
+        .tu-container {
             max-width: 960px;
 
             /* adds back scroolbar for div in Chrome, Edge and Safari */
@@ -2546,19 +2549,19 @@ body {
     }
 
     @media (min-width: 1200px) {
-        #tu-container {
+        .tu-container {
             max-width: 1325px;
         }
     }
 
     @media (min-height: 900px) {
-        #tu-container {
+        .tu-container {
             padding-top: 120px;
         }
     }
 
     @media (min-height: 1300px) {
-        #tu-container {
+        .tu-container {
             padding-top: 150px;
         }
     }
